--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 						</div>
 					</div>
 					<div class="project-preview">
-						<div class="r link-editor" style="background-image: url(tmp/serv-main.png)">
+						<div class="r link-editor" style="background-image: url(tmp/serv-main.jpg)">
 							<div class="cursor show1200">
 								<div class="cursor-scale"></div>
 							</div>
